--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --watch src --ext ts --exec ts-node-esm src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "nodemon --watch src --ext ts --exec ts-node-esm src/index.ts"
   },
   "keywords": [],
   "author": "",
